# ultramegausb-atari-st-rpikbd

./: .gitignore  .gitmodules  6301_COMPARISON.md  6301_DETAILED_COMPARISON.md  6301_FINAL_ANALYSIS.md  6301_PERFORMANCE_ANALYSIS.md  AGENTS.md  BUGFIXES_RP2350.md  Build-notes-RS.md  CHANGES_SUMMARY.txt  CMakeLists.txt  CORE1_OPTIMIZATIONS.md  DR2_DR4_EXPLAINED.md  GAMECUBE_DEBUG_STATUS.md  GAMECUBE_FINAL_STATUS.md  GAMECUBE_IMPLEMENTATION.md  GAMECUBE_V11_IMPLEMENTATION.md  IKBD_COMMAND_BUG_FIX.md  KEYBOARD_SHORTCUTS.md  OLED_DEBUG_INFO.txt  POWERA_ARCADE_IMPLEMENTATION.md  PROJECT_MODERNIZATION.md  PS3_DS3_IMPLEMENTATION.md  QOL_KEYBOARD_SHORTCUTS.md  QUICK_START.txt  README.md  README_v7.3.txt  RELEASE_NOTES.md  RELEASE_NOTES_v10.0.md  RELEASE_NOTES_v7.3.txt  RELEASE_NOTES_v8.0.md  RELEASE_NOTES_v9.1.md  SERIAL_PERFORMANCE_OPTIMIZATIONS.md  SESSION_STATUS_2025-10-28.md  STADIA_IMPLEMENTATION_COMPLETE.md  USB_DEBUGGING_METHODOLOGY.md  XBOX_CONTROLLER_INTEGRATION_PLAN.md  XBOX_DEBUG_ANALYSIS.md  XBOX_FINAL_STATUS.md  XBOX_IMPLEMENTATION_COMPLETE.md  (+10 more)
6301/: 6301.c  6301.h  instr.c  instr.h  ireg.c  ireg.h  sci.c  sci.h  timer.c  timer.h
build-pico/: CMakeCache.txt  Makefile  atari_ikbd_pico.dis  atari_ikbd_pico.elf.map  atari_ikbd_pico.hex  atari_ikbd_pico.uf2  cmake_install.cmake
build-pico/pico-sdk/: Makefile  cmake_install.cmake
build-pico/pico-sdk/docs/: Makefile  cmake_install.cmake
build-pico/pico-sdk/src/: Makefile  cmake_install.cmake
build-pico/pico-sdk/tools/: Makefile  cmake_install.cmake
build-pico/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build-pico2/: CMakeCache.txt  Makefile  atari_ikbd_pico2.dis  atari_ikbd_pico2.elf  atari_ikbd_pico2.elf.map  atari_ikbd_pico2.hex  cmake_install.cmake
build-pico2/pico-sdk/: Makefile  cmake_install.cmake
build-pico2/pico-sdk/docs/: Makefile  cmake_install.cmake
build-pico2/pico-sdk/src/: Makefile  cmake_install.cmake
build-pico2/pico-sdk/tools/: Makefile  cmake_install.cmake
build-pico2_w/: CMakeCache.txt  Makefile  atari_ikbd_pico2_w-working.uf2  atari_ikbd_pico2_w.uf2  cmake_install.cmake
build-pico2_w/libbluepad32/: Makefile  cmake_install.cmake
build-pico2_w/pico-sdk/: Makefile  cmake_install.cmake
build-pico2_w/pico-sdk/docs/: Makefile  cmake_install.cmake
build-pico2_w/pico-sdk/src/: Makefile  cmake_install.cmake
build-pico2_w/pico-sdk/tools/: Makefile  cmake_install.cmake
build-pico2_w/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  pioasm
build-pico_w/: CMakeCache.txt  Makefile  cmake_install.cmake
build-pico_w/libbluepad32/: Makefile  cmake_install.cmake
build-pico_w/pico-sdk/: Makefile  cmake_install.cmake
build-pico_w/pico-sdk/docs/: Makefile  cmake_install.cmake
build-pico_w/pico-sdk/src/: Makefile  cmake_install.cmake
build-pico_w/pico-sdk/tools/: Makefile  cmake_install.cmake
build-pico_w/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build-pico_w/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-picow/: CMakeCache.txt  Makefile  atari_ikbd_pico.uf2  cmake_install.cmake
build-picow/libbluepad32/: Makefile  cmake_install.cmake
build-picow/pico-sdk/: Makefile  cmake_install.cmake
build-picow/pico-sdk/docs/: Makefile  cmake_install.cmake
build-picow/pico-sdk/src/: Makefile  cmake_install.cmake
build-picow/pico-sdk/tools/: Makefile  cmake_install.cmake
build-picow/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build-picow/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
docs/: 6301_COMPARISON.md  6301_DETAILED_COMPARISON.md  6301_FINAL_ANALYSIS.md  6301_PERFORMANCE_ANALYSIS.md  BLUEPAD32_INTEGRATION.md  BLUETOOTH_DEBUGGING_NOTES.md  BUGFIX_SUMMARY_v7.3.md  CHERRY_PICK_REGRESSION.md  CORE1_OPTIMIZATIONS.md  CORE1_PAUSE_FIX.md  CRITICAL_DIFFERENCES.md  DEBUG_XBOX_PS4.md  DEVELOPER_GUIDE.md  FUTURE_WORK.md  GAMECUBE_DEBUG_STATUS.md  GAMECUBE_VENDOR_STATUS.md  HYBRID_RAM_XIP_PLAN.md  IKBD_COMMAND_BUG_FIX.md  IMPLEMENTATION_HISTORY.md  KEYBOARD_SHORTCUTS.md  LLAMATRON_AND_SPEED_OPTIMIZATIONS.md  RELEASE_NOTES_v8.0.md  RELEASE_NOTES_v9.0.md  SERIAL_PERFORMANCE_OPTIMIZATIONS.md  TECHNICAL_NOTES.md  THIRD_PARTY_ANALYSIS.md  UI_UNIFICATION.md  USB_DEBUGGING_METHODOLOGY.md  XBOX_CONTROLLER_INTEGRATION_PLAN.md  XBOX_DEBUG_ANALYSIS.md  XBOX_FINAL_STATUS.md  XBOX_IMPLEMENTATION_COMPLETE.md  XBOX_PHASE2_STATUS.md  XRESET_COMPARISON.md  XRESET_IMPLEMENTATION.md  XRESET_IMPLEMENTED.md  XRESET_VIA_KEYBOARD.md  custom-mappings.md
hardware/Atari-Mega-TT-adapter-v2.2/: PIKBD.kicad_pcb  PIKBD.kicad_prl  PIKBD.kicad_pro  PIKBD.kicad_sch
hardware/Atari-Mega-TT-adapter-v2.2/gerbers/: PIKBD-B_Cu.gbl  PIKBD-B_Mask.gbs  PIKBD-B_Paste.gbp  PIKBD-B_Silkscreen.gbo  PIKBD-F_Cu.gtl  (+6 more)
hidparser/: Architectures.h  Common.h  HIDParser  HIDParser.c  HIDParser.h  USBMode.h
include/: AtariSTMouse.h  HidInput.h  HidInput.h.bak  SerialPort.h  UserInterface.h  bluepad32_init.h  bluepad32_platform.h  config.h  gamecube_adapter.h  hid_app_host.h  horipad_controller.h  mount_splash.h  ps3_controller.h  ps4_controller.h  ps5_controller.h  psc_controller.h  runtime_toggle.h  stadia_controller.h  switch_controller.h  tusb_config.h  usb_device_map.h  version.h  xinput.h
patches/: hid_gamecube_skip.patch  pioasm-cmake-fix.patch
src/: AtariSTMouse.cpp  AtariSTMouse.cpp.backup  HidInput.cpp  HidInput.cpp.bak  HidInput.cpp.bak2  HidInput.cpp.bak3  NVSettings.cpp  SerialPort.cpp  UserInterface.cpp  UserInterface_DE.cpp  UserInterface_EN.cpp  UserInterface_FR.cpp  UserInterface_IT.cpp  UserInterface_SP.cpp  bluepad32_atari.cpp  bluepad32_init.c  bluepad32_platform.c  btstack_config.h  gamecube_adapter.c  gamecube_vendor.c  hid_app_host.c  hid_app_host.c.bak2  hid_app_host.c.bak3  horipad_controller.c  main.cpp  mount_splash.c  ps3_controller.c  ps4_controller.c  ps5_controller.c  psc_controller.c  runtime_toggle.c  sdkconfig.h  stadia_controller.c  switch_controller.c  usb_device_map.c  xinput.c  xinput_atari.cpp
ssd1306/: font.h  ssd1306.c
(+982 files in other folders)
